# firefighter-incident

./: .env.example  .envrc  .force-ci  .gitignore  .mdlrc  .pre-commit-config.yaml  .tool-versions  .yamllint  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yaml  hatch_build.py  mise.toml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  rollup.config.mjs  tailwind.config.js  test_priority_logic.py  versions.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  sync_python_deps.yml  sync_python_deps.yml.disabled
0.0.10/: sitemap.xml
0.0.10/CODE_OF_CONDUCT/: index.html
0.0.10/roadmap/: index.html
0.0.11/search/: search_index.json
0.0.15/: 404.html
0.0.15/CHANGELOG/: index.html
0.0.15/license/: index.html
0.0.15/roadmap/: index.html
0.0.16/: index.html  objects.inv
0.0.16/credits/: index.html
0.0.17/: 404.html  sitemap.xml
0.0.18/: index.html
0.0.18/search/: search_index.json
0.0.19/: index.html  sitemap.xml
0.0.19/FAQ/: index.html
0.0.19/license/: index.html
0.0.20/: 404.html  objects.inv
0.0.20/search/: search_index.json
0.0.23/: objects.inv  sitemap.xml
0.0.23/search/: search_index.json
0.0.4/: 404.html  objects.inv
0.0.4/search/: search_index.json
0.0.5/: sitemap.xml
0.0.5/FAQ/: index.html
0.0.5/search/: search_index.json
0.0.7/: sitemap.xml
0.0.7/credits/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/CHANGELOG/: index.html
dev/CODE_OF_CONDUCT/: index.html
dev/FAQ/: index.html
dev/credits/: index.html
dev/license/: index.html
dev/roadmap/: index.html
dev/search/: search_index.json
docs/: CODE_OF_CONDUCT.md  FAQ.md  SLACK_UX_IMPROVEMENTS.md  credits.md  index.md  roadmap.md
docs/Contributing/: 0000-README.md  0000-prerequisites.md  0001-setup-environment.md  0002-setup-slack-app.md  0003-setup-finish.md  0010-general_architecture.md  development.md  documentation.md  faq.md  ui.md  ux.md
docs/Deploy/: 00-intro.md  XX-auth.md  XX-i18n-l10.md  XX-logs-traces.md  XX-logs.md  XX-settings.md  XX-support-policy.md
docs/Usage/: integrations.md
docs/architecture/: incident-closure-workflow.md  incident-opening-workflow-complete.md  incident-opening-workflow-unified.md  incident-status-workflow.md  incident-workflow.md  incident-workflows.md  jira-integration.md  jira-postmortem.md  overview.md  slack-conversation-tags.md  test-config.md
docs/contributing/: 0000-README.md  0000-prerequisites.md  0001-setup-environment.md  0002-setup-slack-app.md  development.md  documentation.md  faq.md  modern-features.md  testing-postmortem-reminders.md
docs/css/: style.css
docs/deploy/: XX-custom-settings.md  XX-i18n-l10.md  XX-logs-traces.md  XX-settings.md  XX-support-policy.md  XX-tasks.md
docs/reference/: api.md  confluence.md  firefighter.md  incidents.md  jira_app.md  logging.md  pagerduty.md  raid.md  slack.md
docs/sessions/: 2025-12-19-postmortem-5day-reminders.md
docs/usage/: integrations.md
fixtures/: impact_level.djson  incident_role_type.json  priorities.json
fixtures/incidents/: components.json  environments.json  groups.json  impact_level.json  impact_type.json  incident_categories.json  metric_type.json  milestone_type.json  priorities.json  severities.json
fixtures/raid/: area.json
scripts/: gen_credits.py  hatch_build.py
src/: gunicorn.conf.py  main.py  manage.py  update.py
src/api/: admin.py  apps.py  authentication.py  models.py  serializers.py  urls.py
src/components/: __init__.py
src/confluence/: admin.py  apps.py  client.py  models.py  serializers.py  service.py  tables.py  urls.py  utils.py
src/firefighter/: __init__.py  apps.py  asgi.py  celery_client.py  fields_forms_widgets.py  filters.py  http_client.py  sso.py  tables_utils.py  urls.py  utils.py  wsgi.py
src/incidents/: admin.py  apps.py  factories.py  menus.py  signals.py  tables.py  urls.py
src/jira_app/: admin.py  apps.py  client.py  models.py  types.py  utils.py
src/pagerduty/: admin.py  apps.py  models.py  service.py  urls.py
src/raid/: admin.py  apps.py  client.py  forms.py  messages.py  models.py  serializers.py  service.py  types.py  urls.py  utils.py  views.py
src/slack/: admin.py  apps.py  factories.py  rules.py  slack_app.py  slack_incident_context.py  slack_templating.py  urls.py  utils.py
stubs/: decouple.pyi
stubs/django_components/: __init__.pyi  component.pyi  component_registry.pyi
stubs/slack_sdk/: __init__.pyi
tests/: conftest.py
tests/test_api/: test_api_landbot.py  test_api_urls.py  test_incident_api_field_stability.py  test_incident_idempotency.py  test_incident_jira_ticket.py  test_renderer.py
tests/test_atlas/: test_signals.py  test_tasks.py
tests/test_confluence/: test_confluence_utils.py
tests/test_firefighter/: test_firefighter_utils.py  test_logging.py  test_sso.py  test_urls.py
tests/test_incidents/: test_enums.py  test_incident_urls.py
tests/test_jira_app/: __init__.py  conftest.py  test_incident_key_events_sync.py  test_jira_client.py  test_jira_client_watchers.py  test_models.py  test_postmortem_issue_link.py  test_postmortem_service.py  test_timeline_template.py
tests/test_raid/: conftest.py  test_jira_priority_sync.py  test_jira_status_sync.py  test_jira_webhook_auth.py  test_p1_p3_jira_fields.py  test_priority_mapping.py  test_raid_client.py  (+16 more)
v0.0.1/: 404.html  index.html  sitemap.xml
v0.0.2/: 404.html  sitemap.xml
v0.0.24/: objects.inv
v0.0.26/: objects.inv
v0.0.28/: objects.inv  sitemap.xml
v0.0.29/: index.html
v0.0.31/: objects.inv  sitemap.xml
v0.0.39/: sitemap.xml
v0.0.40/: sitemap.xml
v0.0.41/: objects.inv
v0.0.42/: 404.html
v0.0.45/: 404.html  index.html  sitemap.xml
v0.0.46/: index.html
v0.0.49/: sitemap.xml
v0.0.50/: sitemap.xml
v0.0.52/: index.html
v0.0.54/: objects.inv  sitemap.xml
v0.0.56/: objects.inv  sitemap.xml
v0.0.57/: sitemap.xml
v0.0.58/: objects.inv
v0.0.60/: sitemap.xml
v0.0.62/: objects.inv
v0.0.63/: sitemap.xml
v0.0.64/: sitemap.xml
v0.0.65/: sitemap.xml
(+1098 files in other folders)
